# livesplit-one-desktop

./: Cargo.toml  README.md  config.yaml
.github/workflows/: rust.yml
src/: config.rs  keys.rs  main.rs  notifier.rs
