[package]
name = "livesplit-one"
version = "0.0.2"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"
resolver="2"

[features]
default = []

[dependencies]
backtrace = "0.3.13"
bytemuck = "1.4.1"
fern = "0.6.0"
humantime = "2.1.0"
#livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core", features = ["software-rendering", "font-loading", "auto-splitting"] }
#livesplit-core = { path = "../livesplit-core", features = [ "software-rendering",  "auto-splitting"] }
# "font-loading",
livesplit-core = { git = "https://github.com/savage13/livesplit-core", features = ["software-rendering", "auto-splitting"] }
log = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.85", features = ["derive"] }
serde_yaml = "0.9.2"
serde_json = "1.0"
tokio = { version = "1.6.1", features = ["rt-multi-thread"] }
twitch-stream-markers = { path = "twitch-stream-markers" }
lazy_static = "1.4"
clap = { version = "4.1.1", features = ["derive"] }
winit = { version = "0.27.5", default-features = false, features = ["serde","x11"]}
softbuffer = { git = "https://github.com/rust-windowing/softbuffer" }
rfd = { version = "0.10.0", default-features = false, features = ["xdg-portal"] }
directories = "4.0.1"
simple-websockets = "0.1.4"

# Slightly optimize the transpose function to inline everything.
[profile.dev.package."livesplit-one"]
opt-level = 1

# The majority of the rendering is in tiny-skia, which should be optimized as
# much as possible.
[profile.dev.package."tiny-skia"]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.release]
lto = true
panic = "abort"

[profile.release.build-override]
opt-level = 0
